--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,27 @@
 spring:
   application:
     name: popularity
+  cache:
+    type: caffeine
+    caffeine:
+      spec: maximumSize=500,expireAfterWrite=10m
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, metrics
+  metrics:
+    enable:
+      cache: true
+    distribution:
+      percentiles:
+        http.server.requests: 0.5,0.9,0.95,0.99
+      slo:
+        http.server.requests: 100ms,250ms,500ms,1s,2s
+      percentiles-histogram:
+        http.server.requests: true
+logging:
+  level:
+    org.springframework.cache: DEBUG
+    com.redcare.popularity.http.client.github.GithubHttpClient: DEBUG
+    feign.Logger: DEBUG
